<resources>
    <string name="app_name">PokeDexKotlin</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="pokemon_image">Pokémon image</string>
    <string name="loading">Loading…</string>
    <string name="favorite">Favorite</string>
    <string name="pokemon_details_name_pattern">%d - %s</string>
    <string name="pokemon_details_height_pattern">Height: %d</string>
    <string name="pokemon_details_weight_pattern">Weight: %d</string>
    <string name="shiny_version">Shiny version</string>
    <string name="no_results">No results</string>
    <string name="something_wrong_happened">Something wrong happened</string>
    <string name="try_again">Try again</string>
    <string name="no_favorite_yet">No favorite yet</string>
    <string name="ops">Ops…</string>
    <string name="pokeball">pokeball</string>
    <string name="request_fail_message">Something wrong happened. Verify your connection and try again</string>
    <string name="empty_result_message">No pokemon found</string>
    <string name="search">Search</string>
    <string name="pokemon_search_hint">E.g.: Charizard</string>
</resources>
